--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,14 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- For using location services while the app is in the foreground -->
+     <key>NSLocationWhenInUseUsageDescription</key>
+     <string>This app needs access to location when open to track your position.</string>
+     <!-- For using location services at all times (background included) -->
+     <key>NSLocationAlwaysUsageDescription</key>
+     <string>This app needs access to location at all times to track your position.</string>
+     <!-- Optional: For using location services always but with an option for when in use -->
+     <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+     <string>Test.</string>
 </dict>
 </plist>
