--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.2.0
   geocoding: ^3.0.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   flutter:
     sdk: flutter
 
