--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
   firebase_database: ^10.5.4
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
