--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,22 @@ dependencies:
   geocoding: ^3.0.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  flutter_launcher_icons: ^0.13.1
+
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
+  http: ^1.2.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.jpg"
 
 dev_dependencies:
   flutter_test:
