--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
+  firebase_database: ^10.5.4
+  cloud_firestore: ^4.17.3
   http: ^1.2.1
 
 flutter_icons:
