--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   flutter_launcher_icons: ^0.13.1
+  carousel_slider: ^4.2.1
 
   flutter:
     sdk: flutter
