--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   latlong2: ^0.9.0
   flutter_launcher_icons: ^0.13.1
   carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
 
   flutter:
     sdk: flutter
